# vulntrack-legacy-backend

./: .gitignore  ACTIONS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_CELERY.md  UVICORN_GUIDE.md  alembic.ini  brave_response.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md
.github/workflows/: build.yml  ci-cd.yml  code-quality.yml  deploy-simple.yml  deploy.yml  main.yml  release.yml  security-scan.yml  security.yml  test.yml
alembic/: env.py  env_new.py
alembic/versions/: 67820a4ff997_create_devices_table.py
app/: main.py  worker.py
app/api/v1/: api.py
app/api/v1/endpoints/: devices.py  devices_sync.py  scan.py  vulnerability.py
app/core/: celery_app.py  config.py  database.py  settings.py  supabase_client.py  tasks.py
app/models/: device.py
app/schemas/: device.py  vulnerability.py
app/services/: cve_service.py  device_service.py  device_service_new.py  external_apis.py  external_apis.py.backup  external_apis_backup.py  vulnerability_scanner.py
cve-local/: README.md  cve_loader_core.py  cve_main.py  cve_year_loader.py  quick_start.py  test_progress_bars.py  test_verify.py
docs/: API_Documentation.md  Insomnia_sample_doc_endpoint.yaml  VulnTrack_Postman_Collection.json  frontend.md  vulnerability-scanner-engine.md
docs/wiki/: logica.puml  phisical.puml  project-wiki.md  uml.puml
scripts/: init_db.py  quick_setup.py  setup_sqlite.py
tests/: README.md  __init__.py
tests/api/: __init__.py  test_device_endpoints_manual.py
tests/demos/: __init__.py  comprehensive_api_showcase.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_app_endpoints.py
utils/cve-local/: cve_loader_core.py  cve_main.py  cve_year_loader.py  quick_start.py
utils/responses/: brave-search-response.json  sample-service-response.json
